# microservice-regression-suite

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: local.yaml  prod.yaml  staging.yaml
deploy/: Dockerfile
deploy/k8s/: regression-cronjob.yaml
deploy/prometheus/rules/: regression_alerts.yml
src/regression_suite/: __main__.py  cli.py  config.py  core.py  runner.py
src/regression_suite/checks/: grpc.py  postgres.py  service.py
src/regression_suite/reporters/: console.py  json_file.py  prometheus.py  slack.py
tests/: test_suite.py
